[package]
name = "microwave"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13.1", features = ["tokio", "svg", "image"] }
tokio = { version = "1.40.0", features = ["time", "macros"] }
windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_Devices_Properties",
    "Win32_UI_Shell_PropertiesSystem",
] }

[build-dependencies]
bindgen = "0.70.1"
