[package]
name = "microwave"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13.1", features = ["tokio", "svg", "image"] }
rodio = "0.19.0"
tokio = { version = "1.40.0", features = ["time", "macros"] }
windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_Devices_Properties",
    "Win32_UI_Shell_PropertiesSystem",
] }

[build-dependencies]
bindgen = "0.70.1"

[profile.release-opt]
inherits = "release"
codegen-units = 1
debug = false
lto = true
incremental = false
opt-level = 3
overflow-checks = false
strip = "debuginfo"
